# arches-templating

./: .gitignore  README.md  pyproject.toml  setup.py
arches-templating/: README.md
arches_templating/: admin.py  apps.py  models.py  setup.py  urls.py
arches_templating/management/commands/: load_template.py
arches_templating/template_engine/: __init__.py  template_engine.py  template_engine_factory.py  template_tag.py  template_tag_type.py
arches_templating/template_engine/implementations/: docx_template_engine.py  pptx_template_engine.py  xlsx_template_engine.py
arches_templating/views/: template.py
